# perf-fitter

./: Cargo.toml  LICENSE  README.md  pyproject.toml
python_src/perfit/: __init__.py  perfit.pyi
python_src/tests/unit/: test_par_iter_obj_collection_by_ref.py
src/: lib.rs  perfit.rs
src/python/: par_iter_obj_collection_by_ref.rs
